--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.2'
     compile 'com.android.support:appcompat-v7:22.2.1'
-    compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
     compile 'com.android.support:recyclerview-v7:22.2.+'
     compile 'com.android.support:support-v4:22.2.1'
+    compile 'com.android.support:design:22.2.0'
 }
 
