--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.2.+'
     compile 'com.android.support:support-v4:22.2.1'
     compile 'com.android.support:design:22.2.0'
+    compile 'com.jpardogo.materialtabstrip:library:1.1.0'
+    compile 'org.codepond:wizardroid:1.3.1'
 }
 
